--- a/.github/docker/integration-tests/nav2-docker-compose.yaml
+++ b/.github/docker/integration-tests/nav2-docker-compose.yaml
@@ -1,5 +1,3 @@
-version: "3"
-
 services:
   minimal-nav2-bringup:
     image: ghcr.io/open-rmf/free_fleet/minimal-nav2-bringup:jazzy-latest
@@ -11,8 +9,8 @@ services:
     environment:
       - ROS_DOMAIN_ID=42
 
-  minimal-zenoh-bridge:
-    image: ghcr.io/open-rmf/free_fleet/minimal-zenoh-bridge:jazzy-latest
+  minimal-zenoh-bridge-ros2dds:
+    image: ghcr.io/open-rmf/free_fleet/minimal-zenoh-bridge-ros2dds:jazzy-latest
     network_mode: host
     stdin_open: true
     tty: true
