--- a/.github/workflows/nightly.yaml
+++ b/.github/workflows/nightly.yaml
@@ -5,9 +5,99 @@ on:
     # 2am SGT
     - cron: '0 18 * * *'
 
+# on: [push]
+
 jobs:
-  build-minimal-nav2-docker-images:
-    name: Push minimal nav2 docker images to GitHub Packages
+  # build-minimal-nav2-docker-images:
+  #   name: Push minimal nav2 docker images to GitHub Packages
+  #   runs-on: ubuntu-latest
+  #   strategy:
+  #     matrix:
+  #       ros_distribution: [jazzy]
+  #   steps:
+  #     - uses: actions/checkout@v4
+
+  #     - name: Set up Docker Buildx
+  #       uses: docker/setup-buildx-action@v3
+
+  #     - name: Login to docker
+  #       uses: docker/login-action@v3
+  #       with:
+  #         registry: ghcr.io
+  #         username: ${{ github.actor }}
+  #         password: ${{ secrets.GITHUB_TOKEN }}
+
+  #     - name: Build and push minimal-nav2-bringup
+  #       uses: docker/build-push-action@v5
+  #       with:
+  #         push: true
+  #         build-args: |
+  #           ROS_DISTRO=${{ matrix.ros_distribution }}
+  #         tags: ghcr.io/${{ github.repository }}/minimal-nav2-bringup:${{ matrix.ros_distribution }}-latest
+  #         context: .github/docker/minimal-nav2-bringup
+
+  #     - name: Build and push minimal-zenoh-bridge-ros2dds
+  #       uses: docker/build-push-action@v5
+  #       with:
+  #         push: true
+  #         build-args: |
+  #           ROS_DISTRO=${{ matrix.ros_distribution }}
+  #           ZENOH_VERSION=1.1.0
+  #           FREE_FLEET_BRANCH=easy-full-control
+  #         tags: ghcr.io/${{ github.repository }}/minimal-zenoh-bridge-ros2dds:${{ matrix.ros_distribution }}-latest
+  #         context: .github/docker/minimal-zenoh-bridge-ros2dds
+
+  # build-minimal-nav1-docker-images:
+  #   name: Push minimal nav1 docker images to GitHub Packages
+  #   runs-on: ubuntu-latest
+  #   strategy:
+  #     matrix:
+  #       ros_distribution: [noetic]
+  #   steps:
+  #     - uses: actions/checkout@v4
+
+  #     - name: Set up Docker Buildx
+  #       uses: docker/setup-buildx-action@v3
+
+  #     - name: Login to docker
+  #       uses: docker/login-action@v3
+  #       with:
+  #         registry: ghcr.io
+  #         username: ${{ github.actor }}
+  #         password: ${{ secrets.GITHUB_TOKEN }}
+
+  #     - name: Build and push minimal-ros1-sim
+  #       uses: docker/build-push-action@v5
+  #       with:
+  #         push: true
+  #         build-args: |
+  #           ROS_DISTRO=${{ matrix.ros_distribution }}
+  #         tags: ghcr.io/${{ github.repository }}/minimal-ros1-sim:${{ matrix.ros_distribution }}-latest
+  #         context: .github/docker/minimal-ros1-sim
+
+  #     - name: Build and push minimal-nav1-bringup
+  #       uses: docker/build-push-action@v5
+  #       with:
+  #         push: true
+  #         build-args: |
+  #           ROS_DISTRO=${{ matrix.ros_distribution }}
+  #         tags: ghcr.io/${{ github.repository }}/minimal-nav1-bringup:${{ matrix.ros_distribution }}-latest
+  #         context: .github/docker/minimal-nav1-bringup
+
+  #     - name: Build and push minimal-zenoh-bridge-ros1
+  #       uses: docker/build-push-action@v5
+  #       with:
+  #         push: true
+  #         build-args: |
+  #           ROS_DISTRO=${{ matrix.ros_distribution }}
+  #           ZENOH_BRIDGE_REPO=aaronchongth/zenoh-plugin-ros1
+  #           ZENOH_BRIDGE_TAG=namespace
+  #           FREE_FLEET_BRANCH=easy-full-control
+  #         tags: ghcr.io/${{ github.repository }}/minimal-zenoh-bridge-ros1:${{ matrix.ros_distribution }}-latest
+  #         context: .github/docker/minimal-zenoh-bridge-ros1
+
+  build-minimal-rmf-docker-images:
+    name: Push minimal rmf docker images to GitHub Packages
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -25,74 +115,14 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build and push minimal-nav2-bringup
+      - name: Build and push minimal-rmf
         uses: docker/build-push-action@v5
         with:
           push: true
           build-args: |
             ROS_DISTRO=${{ matrix.ros_distribution }}
-          tags: ghcr.io/${{ github.repository }}/minimal-nav2-bringup:${{ matrix.ros_distribution }}-latest
-          context: .github/docker/minimal-nav2-bringup
-
-      - name: Build and push minimal-zenoh-bridge-ros2dds
-        uses: docker/build-push-action@v5
-        with:
-          push: true
-          build-args: |
-            ROS_DISTRO=${{ matrix.ros_distribution }}
-            ZENOH_VERSION=1.1.0
-            FREE_FLEET_BRANCH=easy-full-control
-          tags: ghcr.io/${{ github.repository }}/minimal-zenoh-bridge-ros2dds:${{ matrix.ros_distribution }}-latest
-          context: .github/docker/minimal-zenoh-bridge-ros2dds
-
-  build-minimal-nav1-docker-images:
-    name: Push minimal nav1 docker images to GitHub Packages
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        ros_distribution: [noetic]
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Login to docker
-        uses: docker/login-action@v3
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Build and push minimal-ros1-sim
-        uses: docker/build-push-action@v5
-        with:
-          push: true
-          build-args: |
-            ROS_DISTRO=${{ matrix.ros_distribution }}
-          tags: ghcr.io/${{ github.repository }}/minimal-ros1-sim:${{ matrix.ros_distribution }}-latest
-          context: .github/docker/minimal-ros1-sim
-
-      - name: Build and push minimal-nav1-bringup
-        uses: docker/build-push-action@v5
-        with:
-          push: true
-          build-args: |
-            ROS_DISTRO=${{ matrix.ros_distribution }}
-          tags: ghcr.io/${{ github.repository }}/minimal-nav1-bringup:${{ matrix.ros_distribution }}-latest
-          context: .github/docker/minimal-nav1-bringup
-
-      - name: Build and push minimal-zenoh-bridge-ros1
-        uses: docker/build-push-action@v5
-        with:
-          push: true
-          build-args: |
-            ROS_DISTRO=${{ matrix.ros_distribution }}
-            ZENOH_BRIDGE_REPO=aaronchongth/zenoh-plugin-ros1
-            ZENOH_BRIDGE_TAG=namespace
-            FREE_FLEET_BRANCH=easy-full-control
-          tags: ghcr.io/${{ github.repository }}/minimal-zenoh-bridge-ros1:${{ matrix.ros_distribution }}-latest
-          context: .github/docker/minimal-zenoh-bridge-ros1
+          tags: ghcr.io/${{ github.repository }}/minimal-rmf:${{ matrix.ros_distribution }}-latest
+          context: .github/docker/minimal-rmf
 
   nav1-integration-tests:
     needs: build-minimal-nav1-docker-images
