--- a/free_fleet_examples/config/fleet/nav2_tb3_simulation_fleet_config.yaml
+++ b/free_fleet_examples/config/fleet/nav2_tb3_simulation_fleet_config.yaml
@@ -33,25 +33,16 @@ rmf_fleet:
   finishing_request: "nothing" # [park, charge, nothing]
   responsive_wait: True # Should responsive wait be on/off for the whole fleet by default? False if not specified.
   robots:
-    robot1:
-      charger: "robot1_charger"
+    nav2_tb3:
+      charger: "tb3_charger"
       responsive_wait: False # Should responsive wait be on/off for this specific robot? Overrides the fleet-wide setting.
       # For Nav2RobotAdapter
+      navigation_stack: 2
       initial_map: "L1"
       maps:
         L1:
-          map_url: "/opt/ros/jazzy/share/nav2_bringup/maps/turtlebot3_world.yaml"
-      # initial_pose: [0.056320589035749435, 0.5160754323005676, 0]
-
-    robot2:
-      charger: "robot2_charger"
-      responsive_wait: False # Should responsive wait be on/off for this specific robot? Overrides the fleet-wide setting.
-      # For Nav2RobotAdapter
-      initial_map: "L1"
-      maps:
-        L1:
-          map_url: "/opt/ros/jazzy/share/nav2_bringup/maps/turtlebot3_world.yaml"
-      # initial_pose: [-0.03754809871315956, -0.5848855972290039, 0]
+          map_url: "/opt/ros/jazzy/share/nav2_bringup/maps/tb3_sandbox.yaml"
+      # initial_pose: [-1.6000019311904907, -0.5031192898750305, 0]
 
   robot_state_update_frequency: 10.0 # Hz
 
