--- a/free_fleet_examples/config/zenoh/nav2_tb3_zenoh_bridge_ros2dds_client_config.json5
+++ b/free_fleet_examples/config/zenoh/nav2_tb3_zenoh_bridge_ros2dds_client_config.json5
@@ -1,7 +1,7 @@
 {
   plugins: {
     ros2dds: {
-      namespace: "/turtlebot3_1",
+      namespace: "/nav2_tb3",
       allow: {
         publishers: [".*/tf", ".*/battery_state"],
         subscribers: [],
