--- a/.github/workflows/nightly.yaml
+++ b/.github/workflows/nightly.yaml
@@ -1,9 +1,11 @@
 name: nightly
 
-on:
-  schedule:
-    # 2am SGT
-    - cron: '0 18 * * *'
+# on:
+#   schedule:
+#     # 2am SGT
+#     - cron: '0 18 * * *'
+
+on: [push]
 
 jobs:
   build-minimal-nav2-docker-images:
@@ -41,7 +43,7 @@ jobs:
           build-args: |
             ROS_DISTRO=${{ matrix.ros_distribution }}
             ZENOH_VERSION=1.1.0
-            FREE_FLEET_BRANCH=easy-full-control
+            FREE_FLEET_BRANCH=efc-cleanup
           tags: ghcr.io/${{ github.repository }}/minimal-zenoh-bridge-ros2dds:${{ matrix.ros_distribution }}-latest
           context: .github/docker/minimal-zenoh-bridge-ros2dds
 
@@ -90,7 +92,7 @@ jobs:
             ROS_DISTRO=${{ matrix.ros_distribution }}
             ZENOH_BRIDGE_REPO=aaronchongth/zenoh-plugin-ros1
             ZENOH_BRIDGE_TAG=namespace
-            FREE_FLEET_BRANCH=easy-full-control
+            FREE_FLEET_BRANCH=efc-cleanup
           tags: ghcr.io/${{ github.repository }}/minimal-zenoh-bridge-ros1:${{ matrix.ros_distribution }}-latest
           context: .github/docker/minimal-zenoh-bridge-ros1
 
