Change maintainer emails, fix versions, minor cleanup
Signed-off-by: Aaron Chong <aaronchongth@gmail.com>

--- a/free_fleet_adapter/package.xml
+++ b/free_fleet_adapter/package.xml
@@ -4,7 +4,7 @@
   <name>free_fleet_adapter</name>
   <version>2.0.0</version>
   <description>Free fleet Open-RMF fleet adapter based on fleet_adapter_template</description>
-  <maintainer email="aaron@openrobotics.org">Aaron Chong</maintainer>
+  <maintainer email="aaronchong@intrinsic.ai">Aaron Chong</maintainer>
   <license>Apache License 2.0</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
