--- a/free_fleet/package.xml
+++ b/free_fleet/package.xml
@@ -4,7 +4,7 @@
   <name>free_fleet</name>
   <version>2.0.0</version>
   <description>A free fleet management library</description>
-  <maintainer email="aaron@openrobotics.org">Aaron Chong</maintainer>
+  <maintainer email="aaronchong@intrinsic.ai">Aaron Chong</maintainer>
   <license>Apache License 2.0</license>
 
   <exec_depend>builtin_interfaces</exec_depend>
