--- a/.github/docker/minimal-nav1-bringup/Dockerfile
+++ b/.github/docker/minimal-nav1-bringup/Dockerfile
@@ -4,7 +4,7 @@ FROM docker.io/ros:$ROS_DISTRO-ros-base
 RUN apt update && apt install -y curl ros-$ROS_DISTRO-turtlebot3-navigation ros-$ROS_DISTRO-dwa-local-planner
 
 RUN mkdir -p /tb3 && cd /tb3 \
-  && curl -sL https://github.com/ros-navigation/navigation2/archive/refs/heads/master.tar.gz -o navigation2.tar.gz \
+  && curl -sL https://github.com/ros-navigation/navigation2/archive/refs/tags/1.3.4.tar.gz -o navigation2.tar.gz \
   && mkdir -p /tb3/navigation2 && tar zxf navigation2.tar.gz -C /tb3/navigation2 --strip-components=1 && rm navigation2.tar.gz
 
 ENV TURTLEBOT3_MODEL=burger
