--- a/free_fleet_examples/package.xml
+++ b/free_fleet_examples/package.xml
@@ -13,7 +13,12 @@
 
   <exec_depend>free_fleet</exec_depend>
   <exec_depend>free_fleet_adapter</exec_depend>
-  <exec_depend>rmf_demos</exec_depend>
+  <exec_depend>rmf_traffic_ros2</exec_depend>
+  <exec_depend>rmf_building_map_tools</exec_depend>
+  <exec_depend>rmf_visualization</exec_depend>
+  <exec_depend>rmf_fleet_adapter</exec_depend>
+  <exec_depend>rmf_task_ros2</exec_depend>
+  <exec_depend>rmf_demos_tasks</exec_depend>
   <exec_depend>tf2_ros</exec_depend>
 
   <test_depend>ament_cmake_pytest</test_depend>
