--- a/.github/docker/free-fleet-examples/Dockerfile
+++ b/.github/docker/free-fleet-examples/Dockerfile
@@ -1,8 +1,11 @@
 ARG ROS_DISTRO=jazzy
 FROM docker.io/ros:$ROS_DISTRO-ros-base
 ARG FREE_FLEET_BRANCH=main
+ARG ZENOH_VERSION=1.1.0
 
-RUN apt update && apt install -y curl ros-$ROS_DISTRO-rmw-cyclonedds-cpp
+RUN apt update && apt install -y curl ros-$ROS_DISTRO-rmw-cyclonedds-cpp python3-pip
+
+RUN pip3 install eclipse-zenoh==$ZENOH_VERSION pycdr2 rosbags nudged --break-system-packages
 
 # fetch sources
 RUN mkdir -p /ff && cd /ff \
@@ -22,4 +25,11 @@ RUN rm -rf \
   /dist
 
 ENV RMW_IMPLEMENTATION=rmw_cyclonedds_cpp
-ENTRYPOINT ["bash", "-c", ". /opt/ff/setup.bash && bash"]
+
+# Environment setup
+RUN echo '#!/usr/bin/env bash' > /ff_entrypoint.sh
+RUN echo 'source /opt/ff/setup.bash' >> /ff_entrypoint.sh
+RUN echo 'exec "$@"' >> /ff_entrypoint.sh
+RUN chmod +x /ff_entrypoint.sh
+
+ENTRYPOINT ["/ff_entrypoint.sh"]
