--- a/.github/workflows/nav2-integration-tests.yaml
+++ b/.github/workflows/nav2-integration-tests.yaml
@@ -3,7 +3,42 @@ name: nav2-integration-tests
 on: push
 
 jobs:
+  build-free-fleet-docker-image:
+    name: Build free fleet image
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        ros_distribution: [jazzy]
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Extract branch name
+        shell: bash
+        run: echo "branch=${GITHUB_HEAD_REF:-${GITHUB_REF#refs/heads/}}" >> $GITHUB_OUTPUT
+        id: extract_branch
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Build and export free-fleet-examples
+        uses: docker/build-push-action@v5
+        with:
+          push: false
+          build-args: |
+            ROS_DISTRO=${{ matrix.ros_distribution }}
+            FREE_FLEET_BRANCH=${{ steps.extract_branch.outputs.branch }}
+          tags: ghcr.io/${{ github.repository }}/free-fleet-examples:${{ matrix.ros_distribution }}-${{ steps.extract_branch.outputs.branch }}
+          context: .github/docker/free-fleet-examples
+          outputs: type=docker,dest=${{ runner.temp }}/free-fleet-examples.tar
+
+      - name: Upload artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: free-fleet-examples
+          path: ${{ runner.temp }}/free-fleet-examples.tar
+
   integration-tests:
+    needs: [build-free-fleet-docker-image]
     timeout-minutes: 10
     runs-on: ubuntu-latest
     container:
@@ -15,14 +50,44 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v1
+        uses: actions/checkout@v4
+
+      - name: Extract branch name
+        shell: bash
+        run: echo "branch=${GITHUB_HEAD_REF:-${GITHUB_REF#refs/heads/}}" >> $GITHUB_OUTPUT
+        id: extract_branch
 
       - name: Install docker-compose
         run: |
           sudo apt update && sudo apt install docker-compose -y
 
+      - name: Download artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: free-fleet-examples
+          path: ${{ runner.temp }}
+
+      - name: Load image
+        run: |
+          docker load --input ${{ runner.temp }}/free-fleet-examples.tar
+          docker image ls -a
+
       - name: Start test fixture containers
         run: docker-compose -f ".github/docker/integration-tests/nav2-docker-compose.yaml" up -d --build
+
+      - name: Start the RMF common nodes
+        run: |
+          docker run --network=host -d \
+            -e ROS_DOMAIN_ID=0 \
+            ghcr.io/${{ github.repository }}/free-fleet-examples:${{ matrix.ros_distribution }}-${{ steps.extract_branch.outputs.branch }} \
+            bash -c "ros2 launch free_fleet_examples turtlebot3_world_rmf_common.launch.xml"
+
+      - name: Start the free fleet adapter
+        run: |
+          docker run --network=host -d \
+            -e ROS_DOMAIN_ID=0 \
+            ghcr.io/${{ github.repository }}/free-fleet-examples:${{ matrix.ros_distribution }}-${{ steps.extract_branch.outputs.branch }} \
+            bash -c "ros2 launch free_fleet_examples nav2_tb3_simulation_fleet_adapter.launch.xml"
 
       - name: build-and-test
         uses: ./.github/actions/build-and-test
