Manually use coverage test with env
Signed-off-by: Aaron Chong <aaronchongth@gmail.com>

--- a/.github/actions/build-and-test/action.yaml
+++ b/.github/actions/build-and-test/action.yaml
@@ -29,10 +29,8 @@ runs:
       with:
         required-ros-distributions: ${{ inputs.ros-distribution }}
 
-    - name: build and test
+    - name: build
       uses: ros-tooling/action-ros-ci@v0.3
-      env:
-        RMW_IMPLEMENTATION: rmw_cyclonedds_cpp
       with:
         package-name: free_fleet free_fleet_adapter free_fleet_examples
         target-ros2-distro: ${{ inputs.ros-distribution }}
@@ -44,9 +42,16 @@ runs:
                   "-DNAV2_INTEGRATION_TESTING=${{ inputs.nav2-integration-testing }}"
               ],
               "mixin": ["coverage-pytest"]
-            },
-            "test": {
-              "mixin": ["coverage-pytest"]
             }
           }
         colcon-mixin-repository: https://raw.githubusercontent.com/colcon/colcon-mixin-repository/master/index.yaml
+        skip-tests: true
+
+    - name: test
+      env:
+        RMW_IMPLEMENTATION: rmw_cyclonedds_cpp
+        ROS_DOMAIN_ID: 0
+      run: |
+        cd ros_ws/
+        colcon test --packages-select free_fleet free_fleet_adapter free_fleet_examples --mixin coverage-pytest
+      shell: bash
